<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".RegActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent"
        android:layout_marginHorizontal="@dimen/indent"
        android:textSize="30sp"
        android:text="@string/go_reg" />

    <EditText
        android:id="@+id/user_phone_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:minHeight="48dp"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="@dimen/indent"
        android:textColorHint="@color/gray"
        android:hint="@string/user_phone" />

    <EditText
        android:id="@+id/user_pass_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="@dimen/indent"
        android:textColorHint="@color/gray"
        android:hint="@string/user_pass" />

    <Button
        android:id="@+id/reg_button"
        style="@style/Button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:text="@string/register" />

    <TextView
        android:id="@+id/link_to_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/indent"
        android:textSize="15sp"
        android:text="@string/voity" />

</LinearLayout>